ADD_SUBDIRECTORY(algorithms)
ADD_SUBDIRECTORY(assert)
ADD_SUBDIRECTORY(clog)
ADD_SUBDIRECTORY(cmake)
ADD_SUBDIRECTORY(diamon)
ADD_SUBDIRECTORY(elipsis)
ADD_SUBDIRECTORY(exception)
ADD_SUBDIRECTORY(flux)
ADD_SUBDIRECTORY(friend)
ADD_SUBDIRECTORY(fstream)
ADD_SUBDIRECTORY(function_pointer)
ADD_SUBDIRECTORY(keywords)
ADD_SUBDIRECTORY(mygetnum)
ADD_SUBDIRECTORY(pair)
ADD_SUBDIRECTORY(reference)
ADD_SUBDIRECTORY(select)
ADD_SUBDIRECTORY(signal)
ADD_SUBDIRECTORY(template)
ADD_SUBDIRECTORY(time)
ADD_SUBDIRECTORY(getopt)
ADD_SUBDIRECTORY(print_vector)
ADD_SUBDIRECTORY(ctime)
