cmake_minimum_required(VERSION 2.8)

PROJECT(openmp)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg")

INCLUDE(FindOpenMP)

IF(OPENMP_FOUND)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_CXX_FLAGS}")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_C_FLAGS}")
ENDIF()

ADD_EXECUTABLE(for for.c)
ADD_EXECUTABLE(sum sum.c)
