PROJECT(multi)

SET(PACKAGE_NAME "Multi Directory Test" CACHE STRING "Package name" FORCE)
SET(PACKAGE_STRING "Multi Directory Test 1.0-release" CACHE STRING "Package string full name" FORCE)
SET(PACKAGE_TARNAME "eo" CACHE STRING "Package tar name" FORCE)
SET(PACKAGE_VERSION "1.0-realease" CACHE STRING "Package version" FORCE)
SET(VERSION "1.0" CACHE STRING "Global version" FORCE)
SET(GLOBAL_VERSION "${VERSION}")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ENABLE_LANGUAGE(CXX)
ENABLE_LANGUAGE(C)

configure_file(config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

IF (WIN32)
   ADD_DEFINITIONS(-D_WINDOWS=1)
ENDIF (WIN32)

SET(CMAKE_DEFAULT_BUILD_TYPE "Debug" CACHE STRING "Variable that stores the default CMake build type" FORCE)

IF (NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE ${CMAKE_DEFAULT_BUILD_TYPE} CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

IF (CMAKE_BUILD_TYPE MATCHES Debug)
   ADD_DEFINITIONS(-DCMAKE_VERBOSE_MAKEFILE=ON)
ENDIF (CMAKE_BUILD_TYPE MATCHES Debug)

IF (ENABLE_CMAKE_TESTING)
   ENABLE_TESTING()
ENDIF (ENABLE_CMAKE_TESTING)

ADD_SUBDIRECTORY(src)
